<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="horizontal" >

    <LinearLayout
        style="@style/LinearLayout_bg"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_marginLeft="30dp"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom|center"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/icon_search"
                android:gravity="center|left"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/search_small" />

                <EditText
                    android:id="@+id/enter_txt"
                    style="@style/text_20_999A9D"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/icon_search"
                    android:clickable="true"
                    android:focusable="true"
                    android:singleLine="true"
                    android:text="@string/search_txt" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/linear_back"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginLeft="30dp"
                android:background="@drawable/selector_tag"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/image_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_back" />

                <TextView
                    android:id="@+id/txt_back"
                    style="@style/text_20_5fb7e0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/back_txt" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_space"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:background="@drawable/selector_tag"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/image_space"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_space" />

                <TextView
                    android:id="@+id/txt_space"
                    style="@style/text_20_5fb7e0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/space_txt" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_clear"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/selector_tag"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/image_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_clear" />

                <TextView
                    android:id="@+id/txt_clear"
                    style="@style/text_20_5fb7e0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/clear_txt" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="4" >

            <GridView
                android:id="@+id/letter_grid"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:gravity="center"
                android:horizontalSpacing="8dp"
                android:listSelector="@drawable/grid_item_letter"
                android:numColumns="6"
                android:scrollbars="none"
                android:verticalSpacing="6dp" >
            </GridView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            android:gravity="left|top"
            android:orientation="vertical" >

            <TextView
                style="@style/text_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:text="@string/example_txt" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    style="@style/text_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt1" />

                <TextView
                    style="@style/text_1_0f69bd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="择天记" />

                <TextView
                    style="@style/text_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt2" />

                <TextView
                    style="@style/text_1_0f69bd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ZTJ" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_weight="5"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="90dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/result_search"
                style="@style/text_40_ffffff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:layout_marginLeft="10dp"
                android:text="@string/hotsearch_txt" />

            <TextView
                android:id="@+id/tv_page"
                style="@style/text_20_ffffff"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="10dp"
                android:gravity="right|bottom"
                android:text="0/0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <GridView
                android:id="@+id/search_grid"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:horizontalSpacing="40dp"
                android:listSelector="@drawable/bg_program"
                android:verticalSpacing="20dp"
                android:visibility="gone" >
            </GridView>

            <LinearLayout
                android:id="@+id/search_nullres"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/search_null" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:gravity="left"
                    android:orientation="vertical" >

                    <TextView
                        style="@style/text_20_999A9D"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt3" />

                    <TextView
                        style="@style/text_20_999A9D"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt4" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>